<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:fontFamily="@font/roboto_light"
        android:text="Login"
        android:textColor="#000000"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04000002" />

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="251dp"
        android:layout_height="48dp"
        android:background="@drawable/button"
        android:fontFamily="@font/roboto_medium"
        android:text="Anmelden"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/logInToSignUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogIn"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/logInToSignUpBtn"
        android:layout_width="203dp"
        android:layout_height="38dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/button"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/jetzt_registrieren"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameLogInTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Benutzername"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameLogIn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordLogInTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Passwort"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>